[tool.poetry]
name = "Leukeleu-tap-jira"
version = "0.0.1"
description = "`tap-jira` is a Singer tap for Jira, built with the Meltano Singer SDK."
readme = "README.md"
authors = ["Wouter de Vries <wdevries@leukeleu.nl>"]
keywords = [
    "ELT",
    "Jira",
]
license = "Apache-2.0"
packages = [
    { include = "tap_jira" },
]

[tool.poetry.dependencies]
python = ">=3.8.1,<4"
singer-sdk = { version="~=0.40.0" }
fs-s3fs = { version = "~=1.1.1", optional = true }
requests = "~=2.32.3"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.4.0"
singer-sdk = { version="~=0.40.0", extras = ["testing"] }
requests-mock = "^1.12.1"

[tool.poetry.extras]
s3 = ["fs-s3fs"]

[tool.mypy]
python_version = "3.9"
warn_unused_configs = true

[tool.ruff]
ignore = [
    "ANN101",  # missing-type-self
    "ANN102",  # missing-type-cls
]
select = ["ALL"]
src = ["tap_jira"]
target-version = "py38"


[tool.ruff.flake8-annotations]
allow-star-arg-any = true

[tool.ruff.isort]
known-first-party = ["tap_jira"]

[tool.ruff.pydocstyle]
convention = "google"

[build-system]
requires = ["poetry-core>=1.0.8"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# CLI declaration
tap-jira = 'tap_jira.tap:TapJira.cli'
